# estudos_api

estudos_api/: api_ibge_nomes.py  pagina_google.html  primeiro_requests  pyproject.toml  readme.md  segundo_requests.py  testeErro_api.py
exercicios/: dicionario.py  for.py  tuplas.py  while.py
mini_projeto_api_autenticacao/: gerando_requests bearer.py  gerando_requests.py  projeto.py  pyproject.toml
